Tue Aug 10 16:43:07 1993  Gray Watson  (gray at toaster.antaire.com)

	* Made some minor fixes via feedback from Marc Evans.

Mon Jul 26 05:50:27 1993  Gray Watson  (gray at toaster.antaire.com)

	* Added some C++ via Peter Miller to the manual.

Fri Jul 23 01:36:09 1993  Gray Watson  (gray at toaster.antaire.com)

	* Removed LGPL copyright and put in its place fully free
	software notices.

Thu Jul 22 17:35:23 1993  Gray Watson  (gray at toaster.antaire.com)

	* _malloc_perror -> _malloc_error and made some other minor
	changes.

Tue Jul 20 01:52:02 1993  Gray Watson  (gray at toaster.antaire.com)

	* Added smallest_block runtime calculations and now export
	malloc_address to be setable by debugger at runtime.

Mon Jul 19 12:20:58 1993  Gray Watson  (gray at toaster.antaire.com)

	* Made malloc_address exported per Dave's comments.

	* Added Dave Hill's idea of auto-sensing of shell by malloc_dbg.
	Also added -C option to malloc_dbg to force cshell output.

	* Removed the dblock checking tokens CHECK_DBLOCK and
	CHECK_DB_FENCE for a couple different reasons.  I never liked them
	anyway!  I also renumbered CHECK_FREE and CHECK_FUNCS in the
	process.

	* Fixed a number of int/long problems since Dave Hill is running
	malloc on a 64 bit alpha.

	* Made a number of changes to the configure scripts and conf.h per
	Dave Hill's comments.  Added BASIC_BLOCK and ALLOCATION_ALIGNMENT
	to the auto-config stuff.

Fri Jul 16 00:01:31 1993  Gray Watson  (gray at toaster.antaire.com)

	* Changed malloc_dbg per new ARGV_MAYBE.  Made some various
	changes from ints to longs per some useful comments from Dave.

Tue Jul 13 01:53:32 1993  Gray Watson  (gray@fridge.antaire.com)

	* Version 1.2.6 released.

	* Posting to bsdi.  Last minute porting changes.

Mon Jul 12 02:03:25 1993  Gray Watson  (gray at toaster.antaire.com)

	* Finished new catch-null token.

Tue Jul  6 16:04:17 1993  Gray Watson  (gray at toaster.antaire.com)
